istio/setup/04_bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  # namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
        # - istio
        # - webauthn.api
    - port:
        number: 81
        name: api
        protocol: HTTP
      hosts:
        - "*"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: bookinfo
# spec:
#   hosts:
#     # - "*"
#     - istio
#   gateways:
#     - bookinfo-gateway
#   http:
#     - route:
#         - destination:
#             host: productpage.default.svc.cluster.local
#             port:
#               number: 9080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webauthn
spec:
  hosts:
    - "*"
    # - webauthn.api
  gateways:
    - bookinfo-gateway
  http:
    - match:
      - port: 80
      route:
        - destination:
            host: bff-auth-service.default.svc.cluster.local
            port:
              number: 8080
      corsPolicy:
        allowOrigin:
        - '*'
        allowCredentials: true
        allowMethods: 
        - POST
        - GET
        - PUT
        - DELETE
        - OPTIONS
        # allowHeaders:
        # - cookie
        # maxAge: "24h"
    - match:
      - port: 81
      route:
        - destination:
            host: bff-reverse-proxy-service.default.svc.cluster.local
            port:
              number: 9080
      corsPolicy:
        allowOrigin:
        - '*'
        allowCredentials: true
        allowHeaders:
          - authorization
          - content-type
          - cookie
        allowMethods: 
        - POST
        - GET
        - PUT
        - DELETE
        - OPTIONS
